5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1630_2946.log
== TEST (2019-04-02 16:07:28) 
-- CODE:
MT= float(input("insira media final"))

ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ML= NT*(25/100)
NameError: name 'NT' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:08:25) 
-- CODE:
MT= float(input("insira media final"))

ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

print(ML)
print(MT)
print(MP)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ML= NT*(25/100)
NameError: name 'NT' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:08:30) 
-- CODE:
MT= float(input("insira media final"))

ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

print(ML)
print(MT)
print(MP)
-- EXECUTION TIME:
0.141165
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2946/main.py", line 3, in <module>
    ML= NT*(25/100)
NameError: name 'NT' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:08:41) 
-- CODE:
MT= float(input("insira media final"))

ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

print(ML)
print(MT)
print(MP)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ML= NT*(25/100)
NameError: name 'NT' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:08:53) 
-- CODE:
NT= float(input("insira media final"))

ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

print(ML)
print(MT)
print(MP)
-- OUTPUT:
2.125
2.55
3.825
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:08:55) 
-- CODE:
NT= float(input("insira media final"))

ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

print(ML)
print(MT)
print(MP)
-- EXECUTION TIME:
0.154334
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
2.125
2.55
3.825
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
1.225
1.47
2.205
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:10:28) 
-- CODE:
NT= float(input("insira media final"))

ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

print(float(ML))
print(float(MT))
print(float(MP))
-- OUTPUT:
2.125
2.55
3.825
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:12:20) 
-- CODE:
NT= float(input("insira media final"))

ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

print(float(round(NT, 2))
-- ERROR:
File "XXXX", line 8
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:12:29) 
-- CODE:
NT= float(input("insira media final"))

ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

print(float(round(NT, 2)))
-- OUTPUT:
8.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:12:31) 
-- CODE:
NT= float(input("insira media final"))

ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

print(float(round(NT, 2)))
-- EXECUTION TIME:
0.134988
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
8.5
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
4.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:11) 
-- CODE:
ML= float(input("insira media dos laboratorios:")) 
MT= float(input("insira media dos trablhos:"))
MP= float(input("insara media das provas"))

NF= ML+MT+MP

print(float(round(NT, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(float(round(NT, 2)))
NameError: name 'NT' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:17:13) 
-- CODE:
ML= float(input("insira media dos laboratorios:")) 
MT= float(input("insira media dos trablhos:"))
MP= float(input("insara media das provas"))

NF= ML+MT+MP

print(float(round(NT, 2)))
-- EXECUTION TIME:
0.174764
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2946/main.py", line 7, in <module>
    print(float(round(NT, 2)))
NameError: name 'NT' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:17:14) 
-- CODE:
ML= float(input("insira media dos laboratorios:")) 
MT= float(input("insira media dos trablhos:"))
MP= float(input("insara media das provas"))

NF= ML+MT+MP

print(float(round(NT, 2)))
-- EXECUTION TIME:
0.137184
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2946/main.py", line 7, in <module>
    print(float(round(NT, 2)))
NameError: name 'NT' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:15) 
-- CODE:
ML= float(input("insira media dos laboratorios:")) 
MT= float(input("insira media dos trablhos:"))
MP= float(input("insara media das provas"))

NF= ML+MT+MP

print(float(round(NT, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(float(round(NT, 2)))
NameError: name 'NT' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:52) 
-- CODE:
ML= float(input("insira media dos laboratorios:")) 
MT= float(input("insira media dos trablhos:"))
MP= float(input("insara media das provas"))

NF= ML+MT+MP

print(float(round(NT, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(float(round(NT, 2)))
NameError: name 'NT' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:19:59) 
-- CODE:

ML= (input("insira media dos laboratorios:")) 
MT= (input("insira media dos trablhos:"))
MP= (input("insara media das provas"))



print(float(round(NT, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(float(round(NT, 2)))
NameError: name 'NT' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:22:19) 
-- CODE:

ML= (input("insira media dos laboratorios:")) 
MT= (input("insira media dos trablhos:"))
MP= (input("insara media das provas"))

NT= ML*(25/100) + MT*(30/100) + MP*(45/100)


print(float(round(NT, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    NT= ML*(25/100) + MT*(30/100) + MP*(45/100)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:22:24) 
-- CODE:

ML= (input("insira media dos laboratorios:")) 
MT= (input("insira media dos trablhos:"))
MP= (input("insara media das provas"))

NT= ML*(25/100) + MT*(30/100) + MP*(45/100)


print(float(round(NT, 2)))
-- EXECUTION TIME:
0.186415
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2946/main.py", line 6, in <module>
    NT= ML*(25/100) + MT*(30/100) + MP*(45/100)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:22:24) 
-- CODE:

ML= (input("insira media dos laboratorios:")) 
MT= (input("insira media dos trablhos:"))
MP= (input("insara media das provas"))

NT= ML*(25/100) + MT*(30/100) + MP*(45/100)


print(float(round(NT, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    NT= ML*(25/100) + MT*(30/100) + MP*(45/100)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:24:18) 
-- CODE:

ML= float(input("insira media dos laboratorios:")) 
MT= float(input("insira media dos trablhos:"))
MP= float(input("insara media das provas"))

NT= ML*(25/100) + MT*(30/100) + MP*(45/100)


print(float(round(NT, 2)))
-- OUTPUT:
6.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:29:22) 
-- CODE:
NT= x
ML= x*(25/100)
MT= x*(30/100)
MP= x*(45/100)


print(float(round(NT, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    NT= x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:30:28) 
-- CODE:
NT= x
ML= x*(25/100)
MT= x*(30/100)
MP= x*(45/100)

NT= ML + MT + MP
print(float(round(NT, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    NT= x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:34:50) 
-- CODE:
NT= float(input("insira nota final"))
ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

print(ML)
print(MT)
print(MP)
-- OUTPUT:
2.125
2.55
3.825
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:05) 
-- CODE:
NT= float(input("insira nota final:"))
ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

print(ML)
print(MT)
print(MP)
-- OUTPUT:
2.125
2.55
3.825
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:26) 
-- CODE:
NT= int(input("insira nota final:"))
ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

print(ML)
print(MT)
print(MP)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    NT= int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:36:14) 
-- CODE:
NT= input(float("insira nota final:"))
ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

print(ML)
print(MT)
print(MP)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    NT= input(float("insira nota final:"))
ValueError: could not convert string to float: 'insira nota final:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:39:55) 
-- CODE:
NT= 55
ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

print(ML)
print(MT)
print(MP)
-- OUTPUT:
13.75
16.5
24.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:41:51) 
-- CODE:
ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

NT= ML + MT + MP 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ML= NT*(25/100)
NameError: name 'NT' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:43:20) 
-- CODE:
NT= ML + MT + MP

ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    NT= ML + MT + MP
NameError: name 'ML' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:07) 
-- CODE:
ML= input("media dos laboratorios: ")
MT= input("media dos trabalhos: ")
MP= input("media das provas")



NT= ML + MT + MP

ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ML= NT*(25/100)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:58) 
-- CODE:
ML= input("media dos laboratorios: ")
MT= input("media dos trabalhos: ")
MP= input("media das provas")



NT= ML + MT + MP

ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

print(float(NT))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ML= NT*(25/100)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:47:25) 
-- CODE:
ML= input("media dos laboratorios: ")
MT= input("media dos trabalhos: ")
MP= input("media das provas")



NT= ML + MT + MP

ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

print(float(round(NT, 2)))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ML= NT*(25/100)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:47:52) 
-- CODE:
ML= input("media dos laboratorios: ")
MT= input("media dos trabalhos: ")
MP= input("media das provas: ")



NT= ML + MT + MP

ML= NT*(25/100)
MT= NT*(30/100)
MP= NT*(45/100)

print(float(round(NT, 2)))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ML= NT*(25/100)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:48:29) 
-- CODE:
ML= input("media dos laboratorios: ")
MT= input("media dos trabalhos: ")
MP= input("media das provas: ")



NT= ML + MT + MP


print(float(round(NT, 2)))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(float(round(NT, 2)))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:48:31) 
-- CODE:
ML= input("media dos laboratorios: ")
MT= input("media dos trabalhos: ")
MP= input("media das provas: ")



NT= ML + MT + MP


print(float(round(NT, 2)))



-- EXECUTION TIME:
0.295075
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2946/main.py", line 10, in <module>
    print(float(round(NT, 2)))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:49:53) 
-- CODE:
ML= input("media dos laboratorios: ")
MT= input("media dos trabalhos: ")
MP= input("media das provas: ")



NT= float(ML) + float(MT) + float(MP)


print(float(round(NT, 2)))



-- OUTPUT:
19.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:50:07) 
-- CODE:
ML= input("media dos laboratorios: ")
MT= input("media dos trabalhos: ")
MP= input("media das provas: ")



NT= float(ML) + float(MT) + float(MP)


print(float(round(NT, 2)))



-- EXECUTION TIME:
0.31928
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
19.9
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
17.21
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:07:25) 
-- CODE:
NT= float(input("media"))

ML= float(input("media dos laboratorios: "))
MT= float(input("media dos trabalhos: "))
MP= float(input("media das provas: "))



NT= ML + MT + MP


print(float(round(NT, 2)))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    MP= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 21:02:23) 
-- CODE:
NT= float(input("media"))

ML= float(input("media dos laboratorios: "))
MT= float(input("media dos trabalhos: "))
MP= float(input("media das provas: "))



NT= ML + MT + MP


print(float(round(NT, 2)))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    MP= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
